# mamba

./: .gitignore  README.md  pyproject.toml  run_training.sh  train.sh  train.slurm
.github/workflows/: discord-notif.yml  lint.yml  test.yml
src/: __init__.py  config.py  eval.py  test.py  train.py
src/data/: dataset.py  pad_collator.py  tokenizer.py
src/engine/: solver.py  trainer.py
src/models/: mamba.py  mamba_mapping.py
src/utils/: data_manager.py  logging.py
test/: conftest.py  test_config.py  test_eval.py  test_train.py
test/data/: test_dataset.py  test_pad_collator.py  test_tokenizer.py
test/engine/: test_solver.py  test_trainer.py
test/models/: test_mamba.py  test_mamba_mapping.py
test/utils/: test_data_manager.py
