[project]
name = "mamba"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "causal-conv1d>=1.6.0",
    "mamba-ssm[dev]>=2.3.0",
    "torch>=2.10.0",
    "tqdm>=4.67.3",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.1",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["test"]
norecursedirs = ["train_data"]

[tool.uv]
environments = ["sys_platform == 'linux'"]