[project]
name = "mamba"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.10.0",
    "tqdm>=4.67.3",
    "numpy",
	"easy-logging>=0.1.1",
]

[project.optional-dependencies]
gpu = [
    "causal-conv1d>=1.6.0",
    "mamba-ssm>=2.3.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.1",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["test"]
norecursedirs = ["train_data"]

[tool.uv]
environments = ["sys_platform == 'linux'"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
exclude = ["venv", ".venv", "__pycache__", "build", "dist", ".eggs", "*.egg", ".mypy_cache", ".pytest_cache"]
select = ["E", "F", "W", "C90", "B", "B9", "ANN", "COM", "D", "ERA", "ISC", "N", "Q000", "S", "SIM", "TID251", "UP", "YTT", "T"]
ignore = [
	"W191",  # indentation contains tabs
	"ERA001", # Found commented-out code
	"S311",  # Standard pseudo-random generators are not suitable for security/cryptographic purposes
	"D206",  # Docstring should be indented with spaces equal to the surrounding code
	"D100",  # Missing docstring in public module
	"D203",  # incorrect-blank-line-before-class
	"D213",  # multi-line-summary-second-line
	"UP035", # Import from `collections.abc`instead: ...
	"ANN401",# Dynamically typed expressions (typing.Any) are disallowed 
]

[tool.ruff.lint.per-file-ignores]
"test/**/*.py" = [
    "S101",    # Use of assert detected
    "D",       # All docstring rules
    "ANN",     # All type annotation rules
	"E501",   # Line too long
	"COM812",  # Missing trailing comma in a list or dict
	"ERA001", # Found commented-out code
]
[tool.ruff.format]
indent-style = "tab"